--- a/about.html
+++ b/about.html
@@ -3,13 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Desgn Worth</title>
-<<<<<<< HEAD
-    <link rel="stylesheet" href="style.css">
-=======
->>>>>>> d8928951672cfe278fe706f4a8de0991e1f7d7a8
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/hamburgers.css">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- Body font -->
       <link href="https://fonts.googleapis.com/css?family=Abel|Ubuntu" rel="stylesheet">
     <!-- Heading font -->
@@ -41,14 +38,12 @@
       <h2 class="bannerquote">"The biggest mistake a small business can make is to think like a small business." - Postfilm Design</h2>
     </section>
     <section id="section2">
-      <h1>About Desgn Worth</h1>
-        <ul>
-          <li><p>One of our key team values is being professional. We believe in having a commitment is provding our customers with the best professional websites as possible.</p></li>
-          <li><p>We are a team of 5 self managed software engineers eager to build you or your business your dream website!</p></li>
-          <li><p>We also come from a wide variety of backgrounds. We believe in having different backgrounds assists us in overcoming different obsticles.</p></li>
-          <li><p>We believe in serving people and contributing to our community.</p></li>
-          <li><p>We believe in life long learning.</p></li>
-        </ul>
+          <h1>We Have Values, Like People Do.</h1>
+          <p>We believe in honesty with each other and our clients, in how we do business and in the products we create.</p>
+          <p>We are constantly inspired by new tech and fresh ideas and seek to inspire you with our talent and attitude; we work hard to achieve the best for you and for our team.</p>
+          <p>We come from a wide variety of experiences and passions allowing us to solve problems from all sorts of angles and perspectives.</p>
+          <p>We are passionate about building communities of people who we can share what we build and create with to help better their lives.</p>
+          <p>We are life long learners and look for new opportunities to challenge ourselves every day.</p>
     </section>
     <div class="testimonial container">
       <img class="img-circle" id="firstperson"  src="img/happy-person-1.jpg">
@@ -88,9 +83,10 @@
         <div id="testimonialname"><p><b>- Mr. Goodtimes</b></p></div>
       </div>
     </div>
-    <div id="footer">
-      <p>&copy; Copyright Desgn Worth 2017</p>
-    </div>
-    <script src="navigation.js" src="quote.js" src="contnact.js"></script>
+    <footer id="footer">
+      <img id="footerLogo" src="img/desgn-worth-logo.png" />
+      <p>&copy; Desgn Worth 2017</p>
+    </footer>
+    <script src="navigation.js" src="quote.js" src="contact.js"></script>
   </body>
 </html>
