--- a/contact.html
+++ b/contact.html
@@ -72,6 +72,10 @@
         <p>Cheers!</p>
         <p>The Desgn Worth Team</p>
       </div>
+      <footer id="footer">
+        <img id="footerLogo" src="img/desgn-worth-logo.png" />
+        <p>&copy; Desgn Worth 2017</p>
+      </footer>
     <script type="text/javascript" src="scripts/contact.js"></script>
     <script type="text/javascript" src="scripts/navigation.js"></script>
   </body>
