html and css changes for quote page

--- a/quote.html
+++ b/quote.html
@@ -60,7 +60,7 @@
         </div>
         <div class="column">
         <h2>Rush Orders:</h2>
-          <p>Twice as fast, but twice as expensive.</p>
+          <p>The faster, the more expensive.</p>
         </div>
         </div>
         <h1>Base Timeline:</h1>
@@ -70,7 +70,8 @@
           <li>eCommerce Website: 24 weeks</li>
         </ul>
       </div>
-    <h2>Ready to get your Quote? Enter your details below and we'll give you an instant estimate.</h2>
+    <h2>Ready to get your Quote?</h2>
+    <button id="start">Let's Start!</button>
 
     </section>
     <section id="forms" class="tealSection">
@@ -123,7 +124,8 @@
         <h3 id="expire">**Proposal expires on: <span id="valid"></span></h3>
       </div>
       <div class="about-div" id="about-div">
-        <p id="about"><span id="name-italic">Desgn Worth</span> truly values you as a client and we are committed to delivering on-time, quality results. It is our goal as a team to ensure that you are completely satisfied with your project and that it fulfills the needs of your business. We are continually driven by the idea that our work is "for freelancers, by freelancers" and look forward to building your project!</p>
+        <img id="teamPortrait" src="img/grouptwo.jpg" alt="Design Worth Team" />
+        <p id="about" class="textIndent"><span id="name-italic">Desgn Worth</span> truly values you as a client and we are committed to delivering on-time, quality results. It is our goal as a team to ensure that you are completely satisfied with your project and that it fulfills the needs of your business. We are continually driven by the idea that our work is "for freelancers, by freelancers" and look forward to building your project!</p>
       </div>
       <div id="breakdown">
         <h2>Strategy:</h2>
@@ -149,6 +151,11 @@
         <h2>Total: <span id="totalCost"></span></h2>
       </div>
       <div id="nextSteps">
+      </div>
+      <div id="movingForward">
+        <h1>Moving Forward:</h1>
+        <p class="textIndent">Would you like to move forward with this project? Please click below to schedule an inital call with us. We would love to chat and get to know you more!<p>
+        <button>Let's Do It!</button>
       </div>
     </section>
     <footer id="footer">
