replace ico file in quote page proposal section with png

--- a/quote.html
+++ b/quote.html
@@ -118,7 +118,7 @@
       </div>
     </section>
     <section id="proposal" class="goldSection">
-      <div id="prop-letterhead"><img alt="" src="img/design-worth-favicon.ico"></div>
+      <img id="prop-letterhead" alt="design worth square logo" src="img/design-worth-favicon.png">
       <div id="client-project">
         <div id="prop-title-div"><h2><span id="project-title"></span> Web Design Project Proposal for: <span id="client-name"></span></h2></div><br>
         <h3 id="expire">**Proposal expires on: <span id="valid"></span></h3>
