added border around images, realigned text

--- a/about.html
+++ b/about.html
@@ -54,13 +54,13 @@
     </div>
     <section id="meetourteam">
     <h1>Meet our team!</h1>
-    <div id="members" class="container">
+    <div class="container">
       <div class="container">
-        <img class="img-circle item" src="img/amber.png">
+        <img class="img-circle item" id="amber" src="img/amber.png">
         <p class="bio">Mom of two and veteran spouse. When she's not on her computer coding, building websites and volunteering in online and offline communities, she's running around playing tag and having impromptu dance parties with her kids. Her favorite sources of inspiration are people, businesses and organizations who are passionate about improving other people's lives.</p>
       </div>
       <div class="container">
-        <img class="img-circle" src="img/chris.jpg">
+        <img class="img-circle" id="chris" src="img/chris.jpg">
         <p class="bio">Chris is an aerospace engineer from Washington, DC. He relocated to Seattle last year and recently enrolled in Code Fellows with the goal of bridging his software development skills with the space exploration industry. When he's not coding, he enjoys tutoring, playing the piano, discovering new places to eat with his wife, and traveling.</p>
       </div>
       <div class="container">
