finished localStorage for user and project - user can now load last quote entered

--- a/quote.html
+++ b/quote.html
@@ -71,7 +71,9 @@
         </ul>
       </div>
     <h2>Ready to get your Quote?</h2>
-    <button id="start">Let's Start!</button>
+    <button id="start">Let's Start!</button><br>
+    <a href="#" id="restore">Restore Previous Session</a>
+    <a href="#" id="reset">Reset Previous Session</a>
 
     </section>
     <section id="forms" class="tealSection">
