fixed bug on project form

--- a/quote.html
+++ b/quote.html
@@ -100,15 +100,15 @@
             <legend>What can we help you with?</legend>
             <label>Project Type:</label><br/>
             <input type="radio" name="projectType" value="basic" id="basic" required><label for="basic">Basic 5 Page Website</label><br />
-            <input type="radio" name="projectType" value="eCommerce" id="projectType" required><label for="projectType">eCommerce Website (5 products)</label><br/>
-            <input type="radio" name="projectType" value="membership" id="projectType" required><label for="projectType">Membership Website </label><br/>
-            <input type="radio" name="projectType" value="onlineCourse" id="projectType" required><label for="projectType">Online Course Website </label><br/>
+            <input type="radio" name="projectType" value="eCommerce" id="eCommerce" required><label for="eCommerce">eCommerce Website (5 products)</label><br/>
+            <input type="radio" name="projectType" value="membership" id="membership" required><label for="membership">Membership Website </label><br/>
+            <input type="radio" name="projectType" value="onlineCourse" id="onlineCourse" required><label for="onlineCourse">Online Course Website </label><br/>
             <label for="pages">Number of extra pages:</label>
             <input type="number" name="pages" id="pages" required><br/>
             <label for="products">Number of extra products:</label>
             <input type="products" name="products" id="products"><br/>
-            <label for="products">Number of extra courses:</label>
-            <input type="products" name="products" id="courses"><br/>
+            <label for="courses">Number of extra courses:</label>
+            <input type="courses" name="courses" id="courses"><br/>
             <label for="rush">Project timeline in weeks:</label><input type="input" name="rush" id="rush"><br/>
             <label for="">Would you like to be contacted for:</label><br>
             <input type="checkbox" name="marketing" value="marketing"> <label for="marketing">Marketing</label>
