saving local contact.html version before merging latest repo

--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
       </form>
       </div>
     </section>
-      <div id='submitMessage'>
+      <div id="submitMessage">
         <p>
           Thank you for contacting us! We look forward to reading your message and will reply back within 24 hours.
         </p>
