--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Home Page</title>
+
+    <meta property="og:title" content="Desgn Worth" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="" /> <!--Need URL when we deploy-->
+    <meta property="og:image" content="img/desgn-worth-logo.png" />
+
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/nav.css">
