more updates to OG meta tags

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="" /> <!--Need URL when we deploy-->
     <meta property="og:image" content="img/desgn-worth-logo.png" />
+    <meta property="og:description" content="Desgn Worth...for freelancers, by freelancers!" />
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
