fixed decimal place on quote

--- a/quote.html
+++ b/quote.html
@@ -85,7 +85,7 @@
             <label for="lName">Last Name: </label><input type="text" name="lName" placeholder="Last Name" required="required"/><br/>
             <label for="company">Company: </label><input type="text" name="company" placeholder="Company" required /><br/>
             <label for="email">Email: </label><input type="email" name="email" placeholder="Email" required/><br/>
-            <label for="phone">Phone: </label><input type="tel" name="phone" placeholder="Phone Number" required/><br/>
+            <label for="phone">Phone: </label><input type="tel" name="phone" placeholder="Phone Number" minlength="9" maxlength="14" required/><br/>
             <label for="sDate">Enter a start date: </label>
             <input type="date" name="sDate" min="" id="sDate"><br>
             <label for="eDate">Enter an end date: </label>
