--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Say Hi!</title>
+    
+    <meta property="og:title" content="Desgn Worth" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="" /> <!--Need URL when we deploy-->
+    <meta property="og:image" content="img/desgn-worth-logo.png" />
+    <meta property="og:description" content="Desgn Worth...for freelancers, by freelancers!" />
+
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/contact.css">
