--- a/contact.html
+++ b/contact.html
@@ -55,9 +55,9 @@
           <label for="lName">Last Name: </label><br/>
           <input type="text" name="lName" required="required"><br>
           <label for="email">Email: </label><br>
-          <input type="text" name="email" placeholder="sophie@example.com" required="required"><br>
+          <input type="email" name="email" placeholder="sophie@example.com" required="required"><br>
           <label for="phone">Phone: </label><br>
-          <input type="text" name="phone" placeholder="(123) 456-7890"><br>
+          <input type="tel" name="phone" placeholder="(123) 456-7890"><br>
           <label for="message">Message: </label><br>
           <textarea name="textarea"rows="10" cols="50" placeholder="Questions, concerns, advice? Shoot us a message!"></textarea>
           <button type="submit" id='formButton' value="submit">Send to Desgn Worth</button>
