--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Say Hi!</title>
-    
+
     <meta property="og:title" content="Desgn Worth" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="" /> <!--Need URL when we deploy-->
@@ -62,36 +62,26 @@
           <label for="lName">Last Name: </label><br/>
           <input type="text" name="lName" required="required"><br>
           <label for="email">Email: </label><br>
-<<<<<<< HEAD
-<<<<<<< HEAD
           <input type="email" name="email" placeholder="sophie@example.com" required="required"><br>
           <label for="phone">Phone: </label><br>
           <input type="tel" name="phone" placeholder="(123) 456-7890"><br>
-=======
-          <input type="text" name="email" required="required"><br>
-          <label for="phone">Phone: </label><br>
-          <input type="text" name="phone" ><br>
->>>>>>> 23be735ccb9ff501eb3344b57d6a8eb85a2557a8
-=======
-          <input type="email" name="email" placeholder="sophie@example.com" required="required"><br>
-          <label for="phone">Phone: </label><br>
-          <input type="tel" name="phone" placeholder="(123) 456-7890"><br>
->>>>>>> 3e056986ed6a6e3e36d43063db35532c6d45e5d3
           <label for="message">Message: </label><br>
-          <input type="text" name="message"><br>
+          <textarea name="textarea" rows="10" cols="50" placeholder="Questions, concerns, advice? Shoot us a message!"></textarea>
           <button type="submit" id='formButton' value="submit">Send to Desgn Worth</button>
         </fieldset>
       </form>
       </div>
     </section>
-      <div id="submitMessage">
+    <section class="shrunkenConfirm" id='confirmMsg'>
+      <div id="submitMsg">
         <p>
           Thank you for contacting us! We look forward to reading your message and will reply back within 24 hours.
         </p>
         <p>Cheers!</p>
         <p>The Desgn Worth Team</p>
       </div>
-      <footer id="footer">
+    </section>
+      <footer>
         <img id="footerLogo" src="img/desgn-worth-logo.png" />
         <p>&copy; Desgn Worth 2017</p>
       </footer>
