minor spelling/grammar edits for pages

--- a/quote.html
+++ b/quote.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Desgn Worth: InvoQuote</title>
-    
+
     <meta property="og:title" content="Desgn Worth" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="" /> <!--Need URL when we deploy-->
@@ -48,11 +48,11 @@
       <div class="row">
         <div class="column">
       <h2>Basic custom-designed websites (5 pages): $5,000</h2>
-        <p>This option is best for designing a simple site from scratch. Your custom wb design package will include a responsive design to fit  your site automatically for mobile and tablet.</p>
+        <p>This option is best for designing a simple site from scratch. Your custom web design package will include a responsive design to fit your site automatically for mobile and tablet.</p>
       </div>
       <div class="column">
       <h2>Complex eCommerce sites (10 pages + first 5 products): $15,000</h2>
-        <p>This option is best for small businesses and clients who sell a service or product and require custom functionality for an online store. If you would like a high-quality custom built site with eCommerce functionality then this is the package for you!</p>
+        <p>This option is best for small businesses and clients who sell a service or product and require custom functionality for an online store. If you would like a high-quality, custom-built site with eCommerce functionality then this is the package for you!</p>
       </div>
       </div>
         <h1>Add Ons</h1>
