--- a/about.html
+++ b/about.html
@@ -34,6 +34,7 @@
         </div>
       </nav>
     </header>
+    
     <section id="section1">
       <h2 class="bannerquote">"When it comes to success, in our experience, the challenge is always <span id="worth-style">worth</span> it."</h2>
     </section>
@@ -45,8 +46,8 @@
           <p>We are passionate about building communities of people who we can share what we build and create with to help better their lives.</p>
           <p>We are life long learners and look for new opportunities to challenge ourselves every day.</p>
     </section>
-    <div class="testimonial container">
-      <img class="topimg" id="firstperson"  src="img/happy-person-1.jpg">
+    <div class="testimonial-container">
+      <img class="testimonialimg" id="firstperson"  src="img/happy-person-1.jpg">
         <div>
           <p class="testwords">"I was skeptical at first, but after seeing their packages and got a fair quote, I was sold! I had a couple questions and was able to contact them and they had STELLER customer service! I'd recommend Desgn Worth any time you need a professional website created or maintained."</p>
           <div id="testimonialname"><p><b>- Mr. Goodburger</b></p></div>
@@ -55,30 +56,32 @@
     <section id="meetourteam">
     <h1>Meet our team!</h1>
     <div class="container">
-      <div class="container2">
+      <div class="topthreedivs">
         <img class="img-circle item" id="amber" src="img/amber.png">
         <p class="bio">Mom of two and veteran spouse. When she's not on her computer coding, building websites and volunteering in online and offline communities, she's running around playing tag and having impromptu dance parties with her kids. Her favorite sources of inspiration are people, businesses and organizations who are passionate about improving other people's lives.</p>
       </div>
-      <div class="container2">
+      <div class="topthreedivs">
         <img class="img-circle" id="chris" src="img/chris.jpg">
         <p class="bio">Chris is an aerospace engineer from Washington, DC. He relocated to Seattle last year and recently enrolled in Code Fellows with the goal of bridging his software development skills with the space exploration industry. When he's not coding, he enjoys tutoring, playing the piano, discovering new places to eat with his wife, and traveling.</p>
       </div>
-      <div class="container2">
+      <div class="topthreedivs">
         <img class="img-circle" src="img/eric.jpg">
         <p class="bio">Hey there! I'm Eric. I grew up in a small town called Medford, OR and now live in Seattle. I'm planning on progressing through Code Fellows and becoming a full stack develper. I enjoy outdoor activities such as hiking, camping, fishing, rafting, as well as indoor activities like watching movies or playing games.</p>
       </div>
-      <div class="container2">
+    </div>
+    <div id="bottomcontainer">
+      <div class="bottomtwo">
         <img class="img-circle"  id="alicia"src="img/alicia.jpg">
         <p class="bio">Alicia is a digital marketing specialist for a Bellevue based insurance company focusing on curating content, and social media, e-mail, and video marketing campaigns. Her entrepreneurial spirit inspired her to start her own business, She Goes Media, while in her senior year at Western Washington University, creating extreme sports and lifestyle content for a variety of companies. While Alicia enjoys the digital world she is excited to shift her career into the technical world of full-stack web development. She loves the challenge and reward of writing and deploying code and is looking forward to a career in software development once she finishes the Code Fellows program.</p>
       </div>
-      <div class="container2" id="devin">
+      <div class="bottomtwo" id="devin">
         <img class="img-circle" src="img/devin.jpg">
         <p class="bio">Devin is a communications and marketing specialist for a local pediatric company focusing on creating advertisements and social media marketing. When he isn't behind the computer, he is either out creating videos, snowboarding, or hanging out on Lake Sammamish. Once he graduates Code Fellows, he wants to become the developer for the company that he works for.</p>
       </div>
   </div>
     </section>
     <div class="testimonial">
-      <img class="topimg" id="secondperson"  src="img/happy-person2.jpg">
+      <img class="testimonialimg" id="secondperson"  src="img/happy-person2.jpg">
       <div>
         <p class="testwords">"Great experience. Had to get a website created to sell my products and fast. Did a lot of shopping around and decided to get a quote. Chris reached out to me personally via email and communicated the quote and answers to my questions in great detail. Great work guys!"</p>
         <div id="testimonialname"><p><b>- Mr. Goodtimes</b></p></div>
