fixed problem on about us page from TA edits

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
           <p>We are passionate about building communities of people with whom we can share what we build and create to help better their lives.</p>
           <p>We are life long learners and look for new opportunities to challenge ourselves every day.</p>
     </section>
-    <div class="testimonial container">
+    <div class="testimonial">
       <img class="topimg" id="firstperson"  src="img/happy-person-1.jpg">
         <div>
           <p class="testwords">"I was skeptical at first, but after seeing their packages and got a fair quote, I was sold! I had a couple questions and was able to contact them and they had STELLAR customer service! I'd recommend Desgn Worth any time you need a professional website created or maintained."</p>
