small change to bring current master

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
         </div>
       </nav>
     </header>
-    
+
     <section id="section1">
       <h2 class="bannerquote">"When it comes to success, in our experience, the challenge is always <span id="worth-style">worth</span> it."</h2>
     </section>
@@ -91,7 +91,7 @@
       <img class="testimonialimg" id="secondperson"  src="img/happy-person2.jpg">
       <div>
         <p class="testwords">"Great experience. Had to get a website created to sell my products and fast. Did a lot of shopping around and decided to get a quote. Chris reached out to me personally via email and communicated the quote and answers to my questions in great detail. Great work guys!"</p>
-        <div id="testimonialname"><p><b>- Mr. Goodtimes</b></p></div>
+        <div id="testimonialname"><p><b>- Mr. Goodtime</b></p></div>
       </div>
     </div>
     <footer id="footer">
