added descriptions and base time for membership and course sites

--- a/quote.html
+++ b/quote.html
@@ -45,14 +45,22 @@
       <image id="iqLogo" alt="invoquote logo" src="img/invoquote-logo-dark.png" />
       <h1>How Much Should a Website Cost, Anyway?</h1>
       <p>Prices for websites vary quite a bit depending on what features you would like, but they do fall within a general range.</p>
-      <div class="row">
-        <div class="column">
+      <div class="row-site">
+        <div class="column-site">
       <h2>Basic custom-designed websites (5 pages): $5,000</h2>
         <p>This option is best for designing a simple site from scratch. Your custom web design package will include a responsive design to fit your site automatically for mobile and tablet.</p>
       </div>
-      <div class="column">
+      <div class="column-site">
       <h2>Complex eCommerce sites (10 pages + first 5 products): $15,000</h2>
         <p>This option is best for small businesses and clients who sell a service or product and require custom functionality for an online store. If you would like a high-quality, custom-built site with eCommerce functionality then this is the package for you!</p>
+      </div>
+      <div class="column-site">
+      <h2>Complex Membership sites (5 pages + unlimited members): $15,000</h2>
+        <p>Looking to set up a site where your members can sign in securely and from anywhere? Our membership option is right for you.</p>
+      </div>
+      <div class="column-site">
+      <h2>Online Course sites (5 pages + 1 Course): $15,000</h2>
+        <p>If you are looking to set up your learning course online, this option is for you. Fully responsive, custom built, and ready to help your students learn!</p>
       </div>
       </div>
         <h1>Add Ons</h1>
@@ -75,6 +83,8 @@
         <ul>
           <li>Basic Website: 8 weeks</li>
           <li>eCommerce Website: 24 weeks</li>
+          <li>Membership Website: 24 weeks</li>
+          <li>Online Course Website: 24 Weeks</li>
         </ul>
       </div>
     <h2>Ready to get your Quote?</h2>
