--- a/quote.html
+++ b/quote.html
@@ -84,7 +84,7 @@
           <li>Basic Website: 8 weeks</li>
           <li>eCommerce Website: 24 weeks</li>
           <li>Membership Website: 24 weeks</li>
-          <li>Online Course Website: 24 Weeks</li>
+          <li>Online Course Website: 24 weeks</li>
         </ul>
       </div>
     <h2>Ready to get your Quote?</h2>
