some more small changes to the site distriptions on quote.html

--- a/quote.html
+++ b/quote.html
@@ -47,19 +47,19 @@
       <p>Prices for websites vary quite a bit depending on what features you would like, but they do fall within a general range.</p>
       <div class="row-site">
         <div class="column-site">
-      <h2>Basic custom-designed websites (5 pages): $5,000</h2>
+      <h2>Basic custom-designed websites<br>(5 pages): $5,000</h2>
         <p>This option is best for designing a simple site from scratch. Your custom web design package will include a responsive design to fit your site automatically for mobile and tablet.</p>
       </div>
       <div class="column-site">
-      <h2>Complex eCommerce sites (10 pages + first 5 products): $15,000</h2>
+      <h2>Complex eCommerce sites<br>(10 pages + first 5 products): $15,000</h2>
         <p>This option is best for small businesses and clients who sell a service or product and require custom functionality for an online store. If you would like a high-quality, custom-built site with eCommerce functionality then this is the package for you!</p>
       </div>
       <div class="column-site">
-      <h2>Complex Membership sites (5 pages + unlimited members): $15,000</h2>
+      <h2>Complex Membership sites<br>(5 pages + unlimited members): $15,000</h2>
         <p>Looking to set up a site where your members can sign in securely and from anywhere? Our membership option is right for you.</p>
       </div>
       <div class="column-site">
-      <h2>Online Course sites (5 pages + 1 Course): $15,000</h2>
+      <h2>Online Course sites<br>(5 pages + 1 Course): $15,000</h2>
         <p>If you are looking to set up your learning course online, this option is for you. Fully responsive, custom built, and ready to help your students learn!</p>
       </div>
       </div>
