nav issue corrected

--- a/about.html
+++ b/about.html
@@ -96,6 +96,6 @@
       <img id="footerLogo" src="img/desgn-worth-logo.png" />
       <p>&copy; Desgn Worth 2017</p>
     </footer>
-    <script src="navigation.js" src="quote.js" src="contact.js"></script>
+    <script type="text/javascript" src="scripts/navigation.js"></script>
   </body>
 </html>
