--- a/index.html
+++ b/index.html
@@ -81,6 +81,6 @@
     <img id="footerLogo" src="img/desgn-worth-logo.png" />
     <p>&copy; Desgn Worth 2017</p>
   </footer>
-  <script type="text/javascript" src="navigation.js"></script>
+  <script type="text/javascript" src="scripts/navigation.js"></script>
   </body>
 </html>
