--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <meta property="og:description" content="Desgn Worth...for freelancers, by freelancers!" />
 
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/hamburgers.css">
     <link rel="stylesheet" href="css/index.css">
@@ -34,53 +33,39 @@
             </span>
           </button>
           <div id="navLinks" class="topNav navHide">
-              <a href="index.html">Home</a>
-              <a href="about.html">About Us</a>
-              <a href="quote.html">Quote</a>
-              <a href="contact.html">Contact</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="quote.html">Quote</a>
+            <a href="contact.html">Contact</a>
           </div>
         </div>
       </nav>
     </header>
-
     <section id="tagline">
       <p id="taglinetext">Try our app for sending out quotes to your potential clients instantly without any extra work on your part!</p>
-      <a href="quote.html"> <button class="cta">Get Your Instant Quote Today!</button></a>
+      <a href="quote.html"> <button class="cta">Test Drive Our App Today!</button></a>
     </section>
-
-  <section class="bodycopy">
+    <section class="bodycopy">
       <p id="aboutText">Our app makes quotes easy for you and your clients! Our online form is quick and pain free, it guides your clients through a step by step process and asks them the questions you need to know to generate a real, professional quote. Once the form is filled out, your client will automatically be able to review their quote. At the same time, you will receive your clients info and will be able to schedule a follow up call.</p>
-  </section>
-
-  <section class="test">
+    </section>
+    <section class="test">
       <img class="img-circle" id="drake"  src="img/drake.png">
-      <p class="testText">"Desgn Worth is a perfect fit for my company! I run a web developing company in Seattle and I don't have enough time to generate quotes on my own time. All I had to do was plug in my specific prices and plug-in the code into my site and I was up in running. Now I have more time to create the websites that I want to desgin. Desgn Worth was worth my time!""<br>
-        <br>
-        - Mr. Aubrey Drake Graham
-      </p>
-  </section>
-
-  <section id="team">
+      <p class="testText">"Desgn Worth is a perfect fit for my company! I run a web developing company in Seattle and I don't have enough time to generate quotes on my own time. All I had to do was plug in my specific prices and plug-in the code into my site and I was up in running. Now I have more time to create the websites that I want to desgin. Desgn Worth was worth my time!""<br><br>- Mr. Aubrey Drake Graham</p>
+    </section>
+    <section id="team">
       <p class="teamText">We are Desgn Worth</p>
-  </section>
-
-  <section class="test">
+    </section>
+    <section class="test">
       <img class="img-circle" id="drake"  src="img/nicki.png">
-      <p class="testText">"I couldn't ask for a better app! It is quick and easy to set up and deploy. I have heard nothing but good feedback from my clients." <br>
-        <br>
-        - Ms. Onika Tanya Maraj
-      </p>
-  </section>
-
-  <section class="lastcta">
-
-  <a href="quote.html"> <button class="cta">Get Your Instant Quote Today!</button></a>
-
-</section>
-  <footer>
+      <p class="testText">"I couldn't ask for a better app! It is quick and easy to set up and deploy. I have heard nothing but good feedback from my clients." <br><br>- Ms. Onika Tanya Maraj</p>
+    </section>
+    <section class="lastcta">
+      <a href="quote.html"> <button class="cta">Test Drive Our App Today!</button></a>
+    </section>
+    <footer>
     <img id="footerLogo" src="img/desgn-worth-logo.png" />
     <p>&copy; Desgn Worth 2017</p>
-  </footer>
-  <script type="text/javascript" src="scripts/navigation.js"></script>
+    </footer>
+    <script type="text/javascript" src="scripts/navigation.js"></script>
   </body>
 </html>
