cleaned up quote page code a little

--- a/quote.html
+++ b/quote.html
@@ -67,11 +67,13 @@
         <div class="row">
           <div class="column">
         <h2>Extra Pages:</h2>
-          <p>Additional pages cost $150 each (minimum of 5)</p>
+          <p>Additional pages cost</p>
+          <p>$150 each (minimum of 5)</p>
         </div>
         <div class="column">
         <h2>Extra Products:</h2>
-          <p>Additional products cost $150 each (minimum of 5)</p>
+          <p>Additional products cost</p>
+          <p>$150 each (minimum of 5)</p>
         </div>
         <div class="column">
         <h2>Rush Orders:</h2>
