about page responsiveness is optimized, code cleaned up

--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
     <meta property="og:description" content="Desgn Worth...for freelancers, by freelancers!" />
 
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/hamburgers.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/contact.css">
     <!-- Body font -->
