footer styles are centralized and uniform

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/hamburgers.css">
     <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/index.css">
     <!-- Body font -->
     <link href="https://fonts.googleapis.com/css?family=Abel|Ubuntu" rel="stylesheet">
@@ -63,8 +64,8 @@
       <a href="quote.html"> <button class="cta">Test Drive Our App Today!</button></a>
     </section>
     <footer>
-    <img id="footerLogo" src="img/desgn-worth-logo.png" />
-    <p>&copy; Desgn Worth 2017</p>
+      <img class="footerLogo" src="img/desgn-worth-logo.png" />
+      <p class="copyright">&copy; Desgn Worth 2017</p>
     </footer>
     <script type="text/javascript" src="scripts/navigation.js"></script>
   </body>
