--- a/quote.html
+++ b/quote.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/hamburgers.css">
     <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/quote.css">
     <!-- Body font -->
     <link href="https://fonts.googleapis.com/css?family=Abel|Ubuntu" rel="stylesheet">
@@ -179,9 +180,9 @@
         <a href="contact.html"><button>Let's Do It!</button></a>
       </div>
     </section>
-    <footer id="footer">
-      <img id="footerLogo" src="img/desgn-worth-logo.png" />
-      <p>&copy; Desgn Worth 2017</p>
+    <footer>
+      <img class="footerLogo" src="img/desgn-worth-logo.png" />
+      <p class="copyright">&copy; Desgn Worth 2017</p>
     </footer>
     <script type="text/javascript" src="scripts/quote.js"></script>
     <script type="text/javascript" src="scripts/navigation.js"></script>
