--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/hamburgers.css">
     <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/about.css">
     <!-- Body font -->
       <link href="https://fonts.googleapis.com/css?family=Abel|Ubuntu" rel="stylesheet">
@@ -124,9 +125,9 @@
         <p class="testimonialname">- Mr. Goodtime</p>
       </div>
     </div>
-    <footer id="footer">
-      <img id="footerLogo" src="img/desgn-worth-logo.png" />
-      <p>&copy; Desgn Worth 2017</p>
+    <footer>
+      <img class="footerLogo" src="img/desgn-worth-logo.png" />
+      <p class="copyright">&copy; Desgn Worth 2017</p>
     </footer>
     <script type="text/javascript" src="scripts/navigation.js"></script>
   </body>
