added info about extra services

--- a/quote.html
+++ b/quote.html
@@ -77,19 +77,28 @@
           <p>$150 each (minimum of 5)</p>
         </div>
         <div class="column">
+        <h2>Extra Courses:</h2>
+          <p>Multiply base price by two.</p>
+        </div>
+        </div>
+        <div class="column">
         <h2>Rush Orders:</h2>
           <p>The faster, the more expensive.</p>
         </div>
         </div>
-        <h1>Base Timeline:</h1>
+        <h1>Base Timelines:</h1>
         <div class="column">
-        <ul>
-          <li>Basic Website: 8 weeks</li>
-          <li>eCommerce Website: 24 weeks</li>
-          <li>Membership Website: 24 weeks</li>
-          <li>Online Course Website: 24 weeks</li>
-        </ul>
-      </div>
+          <ul>
+            <li>Basic Website: 8 weeks</li>
+            <li>eCommerce Website: 24 weeks</li>
+            <li>Membership Website: 24 weeks</li>
+            <li>Online Course Website: 24 weeks</li>
+          </ul>
+        </div>
+        <h1>Other Services:</h1>
+        <div class="column">
+          <p>For other services such as marketing, review management, and website maintenance, we can give you a custom quote. Just make sure to indicate your interest as you go through InvoQuote.</p>
+        </div>
     <h2>Ready to get your Quote?</h2>
     <button id="start">Let's Start!</button><br>
     <a href="#" id="restore">Restore Previous Session</a>
