contact page styling issues fixed

--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
       <div id='columnOne' class="column">
         <h2>Talk</h2>
         <h3>206-538-5058<br>
-        email
+        <a href="#">email</a>
         </h3>
         <h2>Walk</h2>
         <h3>5439 Invoke Ave.<br>
