fixed file extension issue

--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
         <p class="bio">Hey there! I'm Eric. I grew up in a small town called Medford, OR and now live in Seattle. I'm planning on progressing through Code Fellows and becoming a full stack develper. I enjoy outdoor activities such as hiking, camping, fishing, rafting, as well as indoor activities like watching movies or playing games.</p>
       </div>
     <div class="container2">
-        <img class="img-circle"  id="alicia"src="img/alicia.jpg">
+        <img class="img-circle"  id="alicia"src="img/alicia1.jpg">
         <h3>Alicia Lycan</h3>
         <div class="contactInfo">
           <a href="#" target="_blank"  class="contactLink"><h4>GitHub</h4></a>
