--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
       <p id="aboutText">Our app makes quotes easy for you and your clients! Our online form is quick and pain free, it guides your clients through a step by step process and asks them the questions you need to know to generate a real, professional quote. Once the form is filled out, your client will automatically be able to review their quote. At the same time, you will receive your clients info and will be able to schedule a follow up call.</p>
     </section>
     <section class="test">
-      <img class="img-circle" id="drake"  src="img/drake.png">
+      <img class="img-circle" id="drake"  src="img/drake1.png">
       <p class="testText">"Desgn Worth is a perfect fit for my company! I run a web developing company in Seattle and I don't have enough time to generate quotes on my own time. All I had to do was plug in my specific prices and plug-in the code into my site and I was up in running. Now I have more time to create the websites that I want to desgin. Desgn Worth was worth my time!""<br><br>- Mr. Aubrey Drake Graham</p>
     </section>
     <section id="team">
       <p class="teamText">We are Desgn Worth</p>
     </section>
     <section class="test">
-      <img class="img-circle" id="drake"  src="img/nicki.png">
+      <img class="img-circle" id="drake"  src="img/nicki1.png">
       <p class="testText">"I couldn't ask for a better app! It is quick and easy to set up and deploy. I have heard nothing but good feedback from my clients." <br><br>- Ms. Onika Tanya Maraj</p>
     </section>
     <section class="lastcta">
