meta tags for Open Graph protocol complete

--- a/quote.html
+++ b/quote.html
@@ -6,9 +6,9 @@
 
     <meta property="og:title" content="Desgn Worth" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="" /> <!--Need URL when we deploy-->
+    <meta property="og:url" content="https://amgranad.github.io/desgn-worth/" />
     <meta property="og:image" content="img/desgn-worth-logo.png" />
-    <meta property="og:description" content="Desgn Worth...for freelancers, by freelancers!" />
+    <meta property="og:description" content="Give your clients a quote on their next web design project today!" />
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/hamburgers.css">
