--- a/quote.html
+++ b/quote.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Desgn Worth" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://amgranad.github.io/desgn-worth/" />
-    <meta property="og:image" content="img/desgn-worth-logo.png" />
+    <meta property="og:image" content="img/homepage.png" />
     <meta property="og:description" content="Give your clients a quote on their next web design project today!" />
 
     <link rel="stylesheet" href="css/normalize.css">
