--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 
     <meta property="og:title" content="Desgn Worth" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://amgranad.github.io/desgn-worth/" />
+    <meta property="og:url" content="https://amgranad.github.io/desgn-worth/img/homepage.jpg" />
     <meta property="og:image" content="img/homepage.png" />
     <meta property="og:description" content="Feel free to reach out to us -- we would love to hear from you!" />
 
