--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta property="og:title" content="Desgn Worth" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://amgranad.github.io/desgn-worth/" />
+    <meta property="og:url" content="https://amgranad.github.io/desgn-worth/img/homepage.jpg" />
     <meta property="og:image" content="img/homepage.jpg" />
     <meta property="og:description" content="Desgn Worth...for freelancers, by freelancers!" />
 
