--- a/about.html
+++ b/about.html
@@ -72,6 +72,7 @@
         <div class="contactInfo">
           <a href="http://github.com/amgranad" target="_blank"  class="contactLink"><h4>GitHub</h4></a>
           <a href="http://linkedin.com/in/ambergkim" target="_blank"  class="contactLink"><h4>LinkedIn</h4></a>
+          <a href="mailto:amber@amberkimdesign.com" target="_blank"  class="contactLink"><h4>Email</h4></a>
           <a href="http://amberkimdesign.com" target="_blank" class="contactLink"><h4>Website</h4></a>
         </div>
         <p class="bio">Mom of two and veteran spouse. When she's not on her computer coding, building websites, and volunteering in online and offline communities, she's running around playing tag and having impromptu dance parties with her kids. Her favorite sources of inspiration are people, businesses, and organizations who are passionate about improving other people's lives.</p>
@@ -82,6 +83,7 @@
         <div class="contactInfo">
           <a href="#" target="_blank"  class="contactLink"><h4>GitHub</h4></a>
           <a href="#" target="_blank"  class="contactLink"><h4>LinkedIn</h4></a>
+          <a href="mailto:amber@amberkimdesign.com" class="contactLink"><h4>Email</h4></a>
           <a href="#" target="_blank" class="contactLink"><h4>Website</h4></a>
         </div>
         <p class="bio">Chris is an aerospace engineer from Washington, DC. He relocated to Seattle last year and recently enrolled in Code Fellows with the goal of bringing his software development skills into the space exploration industry. When he's not coding, he enjoys tutoring, playing the piano, discovering new places to eat with his wife, and traveling.</p>
@@ -92,6 +94,7 @@
         <div class="contactInfo">
           <a href="#" target="_blank"  class="contactLink"><h4>GitHub</h4></a>
           <a href="#" target="_blank"  class="contactLink"><h4>LinkedIn</h4></a>
+          <a href="#" class="contactLink"><h4>Email</h4></a>
           <a href="#" target="_blank" class="contactLink"><h4>Website</h4></a>
         </div>
         <p class="bio">Hey there! I'm Eric. I grew up in a small town called Medford, OR and now live in Seattle. I'm planning on progressing through Code Fellows and becoming a full stack develper. I enjoy outdoor activities such as hiking, camping, fishing, rafting, as well as indoor activities like watching movies or playing games.</p>
@@ -102,6 +105,7 @@
         <div class="contactInfo">
           <a href="#" target="_blank"  class="contactLink"><h4>GitHub</h4></a>
           <a href="#" target="_blank"  class="contactLink"><h4>LinkedIn</h4></a>
+          <a href="#" class="contactLink"><h4>Email</h4></a>
           <a href="#" target="_blank" class="contactLink"><h4>Website</h4></a>
         </div>
         <p class="bio">Alicia is a digital marketing specialist for a Bellevue-based insurance company focusing on curating content, social media, e-mail, and video marketing campaigns. Her entrepreneurial spirit inspired her to start her own business, She Goes Media, while in her senior year at Western Washington University, creating extreme sports and lifestyle content for a variety of companies. While Alicia enjoys the digital world, she is excited to shift her career into the technical world of full-stack web development. She loves the challenge and reward of writing and deploying code, and is looking forward to a career in software development once she finishes the Code Fellows program.</p>
@@ -112,6 +116,7 @@
         <div class="contactInfo">
           <a href="#" target="_blank"  class="contactLink"><h4>GitHub</h4></a>
           <a href="#" target="_blank"  class="contactLink"><h4>LinkedIn</h4></a>
+          <a href="#" class="contactLink"><h4>Email</h4></a>
           <a href="#" target="_blank" class="contactLink"><h4>Website</h4></a>
         </div>
         <p class="bio">Devin is a communications and marketing specialist for a local pediatric company focusing on creating advertisements and social media marketing. When he isn't behind the computer, he is either out creating videos, snowboarding, or hanging out on Lake Sammamish. Once he graduates Code Fellows, he wants to become the developer for the company where he works.</p>
