--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
         <div class="contactInfo">
           <a href="#" target="_blank"  class="contactLink"><h4>GitHub</h4></a>
           <a href="#" target="_blank"  class="contactLink"><h4>LinkedIn</h4></a>
-          <a href="mailto:amber@amberkimdesign.com" class="contactLink"><h4>Email</h4></a>
+          <a href="#" class="contactLink"><h4>Email</h4></a>
           <a href="#" target="_blank" class="contactLink"><h4>Website</h4></a>
         </div>
         <p class="bio">Chris is an aerospace engineer from Washington, DC. He relocated to Seattle last year and recently enrolled in Code Fellows with the goal of bringing his software development skills into the space exploration industry. When he's not coding, he enjoys tutoring, playing the piano, discovering new places to eat with his wife, and traveling.</p>
